--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   
   # Local Storage
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0  # Para Linux/Desktop
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
   
